@@ -1,0 +1,68 @@
+/*
+ * Copyright (C) 2007 Trolltech ASA
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1.  Redistributions of source code must retain the above copyright
+ *     notice, this list of conditions and the following disclaimer.
+ * 2.  Redistributions in binary form must reproduce the above copyright
+ *     notice, this list of conditions and the following disclaimer in the
+ *     documentation and/or other materials provided with the distribution.
+ * 3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of
+ *     its contributors may be used to endorse or promote products derived
+ *     from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND ANY
+ * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL APPLE OR ITS CONTRIBUTORS BE LIABLE FOR ANY
+ * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+ * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+ * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+#include "testplugin.h"
+
+TestPlugin::TestPlugin(QObject *parent)
+    : QWebObjectPlugin(parent)
+{
+}
+
+TestPlugin::~TestPlugin()
+{
+}
+
+QStringList TestPlugin::keys() const
+{
+    return QStringList(QLatin1String("testplugin"));
+}
+
+QString TestPlugin::descriptionForKey(const QString &) const
+{
+    return QLatin1String("testdescription");
+}
+
+QStringList TestPlugin::mimetypesForKey(const QString &) const
+{
+    return QStringList(QLatin1String("testtype"));
+}
+
+QStringList TestPlugin::extensionsForMimetype(const QString &) const
+{
+    return QStringList(QLatin1String("testsuffixes"));
+}
+
+QObject *TestPlugin::create(QWebObjectPluginConnector *,
+                            const QUrl &,
+                            const QString &,
+                            const QStringList &,
+                            const QStringList &) const
+{
+    return 0;
+}
+
+Q_EXPORT_PLUGIN2(testplugin, TestPlugin)
